// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Holy Grail 1`] = `
.emotion-6 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-2 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
}

<div
  className="emotion-6 emotion-7"
>
  <header
    className="emotion-0 emotion-1"
  >
    Header
  </header>
  <main
    className="emotion-2 emotion-3"
  >
    Main
  </main>
  <footer
    className="emotion-0 emotion-1"
  >
    Footer
  </footer>
</div>
`;

exports[`Layout Media Object 1`] = `
.emotion-2 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
}

.emotion-0 {
  box-sizing: border-box;
  font: inherit;
  color: inherit;
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 0;
}

<div
  className="emotion-4 emotion-5"
>
  <div
    className="emotion-0 emotion-1"
  >
    Side
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    Content
  </div>
</div>
`;
